--- a/src/main/resources/templates/parameters/Supplier.html
+++ b/src/main/resources/templates/parameters/Supplier.html
@@ -11,7 +11,7 @@
     <meta content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal" name="keyword">
     <link href="img/favicon.png" rel="shortcut icon">
 
-    <title>Country Management Page</title>
+    <title>Supplier Management Page</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -40,11 +40,11 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa fa-bars"></i>Clients</h3>
+            <h3 class="page-header"><i class="fa fa fa-bars"></i>Suppliers</h3>
             <ol class="breadcrumb">
                 <li><i class="fa fa-home"></i><a th:href="@{/index}">Home</a></li>
                 <li><i class="fa fa-bars"></i><a th:href="@{/parameters}">Parameters</a></li>
-                <li><i class="fa fa-square-o"></i>Clients</li>
+                <li><i class="fa fa-square-o"></i>Suppliers</li>
             </ol>
         </div>
     </div>
@@ -56,11 +56,11 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-6">
-                            <a class="btn btn-primary" th:href="@{/clients/clientAdd}">
-                                Add New Client
+                            <a class="btn btn-primary" th:href="@{/suppliers/supplierAdd}">
+                                Add New Supplier
                             </a>
                         </div>
-                        <form th:action="@{/parameters/clients}">
+                        <form th:action="@{/parameters/suppliers}">
                             <div class="col-lg-3">
                                 <input class="form-control" name="keyword" type="text">
                             </div>
@@ -75,7 +75,7 @@
 
             <section class="panel">
                 <header class="panel-heading">
-                    Clients List
+                    Suppliers List
                 </header>
 
                 <table class="table table-striped table-advance table-hover">
@@ -87,22 +87,21 @@
                         <th><i class="icon_pin_alt"></i> City</th>
                         <th><i class="icon_cogs"></i> Action</th>
                     </tr>
-                    <tr th:each="client: ${clients}">
-                        <td th:text="${client.name}"></td>
-                        <td th:text="${client.website}"></td>
-
-                        <td th:text="${client.address}"></td>
-                        <td th:text="${client.city}"></td>
+                    <tr th:each="supplier: ${suppliers}">
+                        <td th:text="${supplier.name}"></td>
+                        <td th:text="${supplier.website}"></td>
+                        <td th:text="${supplier.address}"></td>
+                        <td th:text="${supplier.city}"></td>
 
                         <td>
                             <div class="btn-group">
-                                <a class="btn btn-primary" th:href="@{/clients/details/{id}(id=${client.id})}">Details</a>
+                                <a class="btn btn-primary" th:href="@{/suppliers/details/{id}(id=${supplier.id})}">Details</a>
                                 <!--                                        <i class="icon_plus_alt2"></i>-->
-                                <a class="btn btn-success" th:href="@{/clients/edit/{id}(id=${client.id})}">Edit</a>
+                                <a class="btn btn-success" th:href="@{/suppliers/edit/{id}(id=${supplier.id})}">Edit</a>
                                 <!--                                        <i class="icon_check_alt2"></i>-->
                                 <a class="btn btn-danger"
                                    onclick="return confirm('Are you sure you want to delete this record?')"
-                                   th:href="@{/clients/delete/{id}(id=${client.id})}">Delete</a>
+                                   th:href="@{/suppliers/delete/{id}(id=${supplier.id})}">Delete</a>
                                 <!--                                        <i class="icon_close_alt2"></i>-->
                             </div>
                         </td>
