--- a/src/main/resources/templates/fleet/index.html
+++ b/src/main/resources/templates/fleet/index.html
@@ -79,7 +79,7 @@
                     <div class="card-body">
                         <h5 class="card-title"><h3><b>Vehcle Types</b></h3></h5>
                         <p class="card-text">Contains list of Vehcle Types and their details.</p>
-                        <a th:href="@{countries}" class="btn btn-primary">Manage Vehcle Types</a>
+                        <a th:href="@{fleet/vehicletype}" class="btn btn-primary">Manage Vehcle Types</a>
                     </div>
                 </div>
             </div>
