--- a/src/main/resources/templates/fleet/vehicleType.html
+++ b/src/main/resources/templates/fleet/vehicleType.html
@@ -40,69 +40,66 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa fa-bars"></i>Clients</h3>
+            <h3 class="page-header"><i class="fa fa fa-bars"></i>Vehicle Type</h3>
             <ol class="breadcrumb">
                 <li><i class="fa fa-home"></i><a th:href="@{/index}">Home</a></li>
-                <li><i class="fa fa-bars"></i><a th:href="@{/parameters}">Parameters</a></li>
-                <li><i class="fa fa-square-o"></i>Clients</li>
+                <li><i class="fa fa-bars"></i><a th:href="@{/fleets}">Fleets</a></li>
+                <li><i class="fa fa-square-o"></i>Vehicle Type</li>
             </ol>
         </div>
     </div>
 
-    <div class="row">
+    <div class="container" style="width: 70%">
+    <div class="row justify-content-center">
         <div class="col-lg-12">
-            <section class="panel" style="margin-bottom: 0px;">
 
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <a class="btn btn-primary" th:href="@{/clients/clientAdd}">
-                                Add New Client
-                            </a>
-                        </div>
-                        <form th:action="@{/parameters/clients}">
-                            <div class="col-lg-3">
-                                <input class="form-control" name="keyword" type="text">
+            <section class="panel" style="margin-bottom: 0px;">
+                <div class="panel-body" >
+                    <div class="row" style="padding-left: 10px">
+                        <form th:action="@{/fleet/vehicletype}" class="form-inline" method="post">
+                            <div class="form-group">
+                                <label class="sr-only">Id</label>
+                                <input class="form-control" name="id" id="txtId" readonly type="text">
                             </div>
-                            <div class="col-lg-3">
-                                <input class="btn-success form-control" type="submit" value="Filter">
+                            <div class="form-group">
+                                <label class="sr-only">Description</label>
+                                <input class="form-control" name="description" id="txtDescription" placeholder="Description" type="text">
                             </div>
+                            <div class="form-group">
+                                <label class="sr-only">Details</label>
+                                <input class="form-control" name="details" placeholder="Details" id="txtDetails" type="text">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Save</button>
+                            <button type="reset" class="btn btn-warning">Clear</button>
                         </form>
                     </div>
 
                 </div>
             </section>
 
-            <section class="panel">
+            <section class="panel" >
                 <header class="panel-heading">
-                    Clients List
+                   Vehicle Type List
                 </header>
 
                 <table class="table table-striped table-advance table-hover">
                     <tbody>
                     <tr>
-                        <th><i class="icon_profile"></i> Name</th>
-                        <th><i class="icon_calendar"></i> Website</th>
-                        <th><i class="icon_pin_alt"></i> Address</th>
-                        <th><i class="icon_pin_alt"></i> City</th>
+                        <th><i class="icon_profile"></i> Description</th>
+                        <th><i class="icon_calendar"></i> Details</th>
                         <th><i class="icon_cogs"></i> Action</th>
                     </tr>
-                    <tr th:each="client: ${clients}">
-                        <td th:text="${client.name}"></td>
-                        <td th:text="${client.website}"></td>
-
-                        <td th:text="${client.address}"></td>
-                        <td th:text="${client.city}"></td>
+                    <tr th:each="vehicleType: ${vehicletypes}">
+                        <td th:text="${vehicleType.description}" ></td>
+                        <td th:text="${vehicleType.details}"></td>
 
                         <td>
                             <div class="btn-group">
-                                <a class="btn btn-primary" th:href="@{/clients/details/{id}(id=${client.id})}">Details</a>
-                                <!--                                        <i class="icon_plus_alt2"></i>-->
-                                <a class="btn btn-success" th:href="@{/clients/edit/{id}(id=${client.id})}">Edit</a>
+                                <a class="btn btn-success" id="display" th:href="@{/fleet/vehicleType/{id}(id=${vehicleType.id})}">Edit</a>
                                 <!--                                        <i class="icon_check_alt2"></i>-->
                                 <a class="btn btn-danger"
                                    onclick="return confirm('Are you sure you want to delete this record?')"
-                                   th:href="@{/clients/delete/{id}(id=${client.id})}">Delete</a>
+                                   th:href="@{/fleet/vehicleType/delete/{id}(id=${vehicleType.id})}">Delete</a>
                                 <!--                                        <i class="icon_close_alt2"></i>-->
                             </div>
                         </td>
@@ -113,6 +110,10 @@
         </div>
     </div>
 </div>
+</div>
+<th:block layout:fragment="script">
+
+</th:block>
 <!-- container section end -->
 <!-- javascripts -->
 <script th:src="@{/js/jquery.js}"></script>
