--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -131,18 +131,20 @@
               <li><a class=""  th:href="@{/accounts}">Accounts Home</a></li>
               </ul>
           </li>
-          <li class="sub-menu">
-            <a class="" href="javascript:;">
 
-                          <i class="icon_profile"></i>
-                          <span>Security</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-            <ul class="sub">
-              <li><a class="" th:href="@{/payroll}">Security Home</a></li>
-            </ul>
+<!--          <li class="sub-menu">-->
+<!--            <a class="" href="javascript:;">-->
 
-          </li>
+<!--                          <i class="icon_profile"></i>-->
+<!--                          <span>Security</span>-->
+<!--                          <span class="menu-arrow arrow_carrot-right"></span>-->
+<!--                      </a>-->
+<!--            <ul class="sub">-->
+<!--              <li><a class="" th:href="@{/payroll}">Security Home</a></li>-->
+<!--            </ul>-->
+
+<!--          </li>-->
+
           <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="icon_documents_alt"></i>
